Fix navbar spacing issues

--- a/src/less/tools/scaffold.less
+++ b/src/less/tools/scaffold.less
@@ -1,6 +1,6 @@
 .page-wrapper {
-    margin-top: 40px;
     padding: 2 * @grid-gutter;
+    padding-top: 2 * @grid-gutter + 50px;
     min-width: @page-width;
     max-width: 100%;
     min-height: 100vh;
